big changes + quiltflower supremacy or something + also jasm